--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: anphatcompany
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: tư vấn cung cấp thông tin tin tức về các hoạt động xã hội hàng ngày
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
@@ -39,7 +39,7 @@ disqus:
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
 google_analytics:
 
-# Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
+# Your website URL (e.g. http://namchauims.com/)
 # Used for Sitemap.xml and your RSS feed
 url:
 
